--- a/index.html
+++ b/index.html
@@ -11,5 +11,15 @@
     <p class="alert success">Account registration success</p>
     <p class="alert warning">Attention, tariffs will be changed</p>
     <p class="alert error">Transaction error</p>
+
+
+
+   <!-- AVTOCHEK -->
+<button class="btn" type="button">Так</button>
+<button class="btn active" type="button">Ні</button>
+<a class="link" href="#">Посилання 1</a>
+<a class="link active" href="#">Посилання 2</a>
+
+
 </body>
 </html>
